# my_kernel

./: README.md  a.out  cuda_query.cu  cuda_query.py
my_kernel/: =0.10  CMakeLists.txt  LICENSE  README.md  makefile  pyproject.toml
my_kernel/csrc/: common_extension.cc  kernel.cu  kernel_naive.cu  kernel_ptx.cu  kernel_warp.cu
my_kernel/include/: kernel.h  utils.h
my_kernel/python/my_kernel/: __init__.py  kernel.py
test/: bench_test.py  test.py  test_ptx.py  test_warp.py
test/bench_res/: int8 scaled matmul.csv
